# weiss_wsg50

./: .travis.yml  README.html  README.md
weiss_wsg50/: CMakeLists.txt  package.xml
wsg50_common/: CMakeLists.txt  package.xml
wsg50_description/: CMakeLists.txt  package.xml
wsg50_description/meshes/: black_plate.dae  finger.dae  finger.stl  palm.stl  palm_210.dae
wsg50_description/urdf/: wsg50_110.urdf.xacro  wsg50_110_macro.urdf.xacro  wsg50_210.urdf.xacro  wsg50_210_macro.urdf.xacro
wsg50_driver/: CMakeLists.txt  cmd_measure.lua  package.xml
wsg50_driver/config/: wsg50_controller.yaml
wsg50_driver/include/wsg50/: common.h  functions.h
wsg50_driver/include/wsg_50/: functions.h
wsg50_driver/launch/: start.launch  wsg50.launch  wsg50_can.launch  wsg50_layer.launch  wsg50_serial.launch  wsg50_tcp.launch  wsg50_tcp_script.launch  wsg50_udp_script.launch  wsg_50_can.launch  wsg_50_serial.launch  wsg_50_tcp.launch  wsg_50_tcp_script.launch  wsg_50_udp_script.launch
wsg50_driver/module_config/: component.yaml  module.yaml
wsg50_driver/src/: checksum.cpp  cmd.c  common.cpp  functions.cpp  functions_can.cpp  interface.cpp  main.cpp  main_can.cpp  msg.c  serial.c  tcp.c  udp.c  wsg50_layer.cpp
wsg50_driver/test/: roslaunch_test.xml
wsg50_simulation/: CMakeLists.txt  package.xml
wsg50_simulation/launch/: wsg_50.launch  wsg_50_controllers.launch  wsg_50_modular_controllers.launch  wsg_50_powerball_controllers.launch  wsg_50_teleop.launch
wsg50_simulation/src/: wsg_50_sim_driver.cpp
wsg50_simulation/urdf/: wsg50_210.urdf.xacro  wsg_50.urdf  wsg_50.urdf.xacro
